fix: primary email and other email font sizing and align privacy selector
see trello card for details

fixes issue 7658

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -40,6 +40,10 @@ mat-form-field {
       width: 100%;
     }
   }
+  .privacy-selector {
+    justify-content: unset;
+    padding-inline-start: 8px;
+  }
 }
 
 .primary-email-label {
